config/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata: { name: auth-ui }
spec:
  parentRefs:
    - { name: external-gateway, namespace: envoy-gateway-system }
  rules:
    - matches:
        - path: { type: PathPrefix, value: /id }
      backendRefs:
        - { name: auth-ui, kind: Service, group: "", port: 3000 }
